src/test/ui/consts/const-eval/ub-uninhabit.32bit.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/ub-uninhabit.rs:15:35
   |
LL | const BAD_BAD_BAD: Bar = unsafe { MaybeUninit { uninit: () }.init };
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered a value of uninhabited type Bar

error[E0080]: evaluation of constant value failed
  --> $DIR/ub-uninhabit.rs:18:36
   |
LL | const BAD_BAD_REF: &Bar = unsafe { mem::transmute(1usize) };
   |                                    ^^^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered a reference pointing to uninhabited type Bar

error[E0080]: evaluation of constant value failed
  --> $DIR/ub-uninhabit.rs:21:42
   |
LL | const BAD_BAD_ARRAY: [Bar; 1] = unsafe { MaybeUninit { uninit: () }.init };
   |                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed at [0]: encountered a value of uninhabited type Bar

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0080`.
